cmake_minimum_required(VERSION 3.22)
project(Algorithm_templates_and_problem_records)

set(CMAKE_CXX_STANDARD 20)

add_executable(Algorithm_templates_and_problem_records main.cpp)

add_executable(2397 Records/LeetCode/daily-problem/2397.cpp)
add_executable(a Records/CodeForces/Hello2024/a.cpp)
add_executable(c Records/CodeForces/Hello2024/c.cpp)
add_executable(b Records/CodeForces/Hello2024/b.cpp)